Improve cumulative flow diagram view, so it behaves correctly on mobile phones

--- a/app/styles/board/board.scss
+++ b/app/styles/board/board.scss
@@ -93,7 +93,11 @@
 }
 
 #board-statistics-cumulative-vlow-diagram-container {
-	min-width: 800px;
+	overflow: auto;
+
+	.chart-container {
+		min-width: 800px;
+	}
 }
 
 // filters
